# garmin-connect-sync

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  activity_details.json  config.yaml  config.yaml.example  garmin  garmin.spec  pyproject.toml  requirements.txt
.claude/plans/: toasty-hugging-plum.md
.github/workflows/: build.yml  release.yml
app/: config.py  export.py  garmin_client.py  main.py  models.py  rate_limiter.py  scheduler.py  storage.py
